--- a/style.css
+++ b/style.css
@@ -51,9 +51,9 @@ section{
 }
 
 article{
-    width: 150px;
+    width: 22%;
     text-align: center;
-    margin: 50px;
+    margin: 15px;
     background-color: #ffffff;
     width: 220px;
     height: 340px;
