--- a/style.css
+++ b/style.css
@@ -55,7 +55,6 @@ article{
     text-align: center;
     margin: 15px;
     background-color: #ffffff;
-    width: 220px;
     height: 340px;
     border: darkgreen solid 5px;
 }
@@ -171,3 +170,8 @@ footer a:hover{
     margin-bottom: 20px;
 }
 
+article:hover{
+    background-color: darkgreen;
+    height: 380px;
+    width: 26%;
+}
